vendor/ocaml/testsuite/tests/parsing/pr6865.ml
let%foo x = 42
let%foo _ = () and _ = ()
let%foo _ = ()
